# verified-destinations

./: .gitignore  CONTRIBUTING.md  DEV_GUIDE.md  README.md  pyproject.toml
.github/workflows/: on_pr_merge.yaml
destinations/destination_mysql/: destination_mysql.py
destinations/destination_pinecone/: destination.py  seeder.py
destinations/destination_pinecone/tests/: test_pinecone.py
destinations/destination_qdrant/: destination_qdrant.py  seeder.py
destinations/destination_qdrant/tests/: test_qdrant.py
verified_destinations/destination_pinecone/: destination_pinecone.py
verified_destinations/destination_pinecone/tests/: test_pinecone.py
verified_destinations/destination_qdrant/: destination_qdrant.py  seeder.py
verified_destinations/destination_qdrant/tests/: test_qdrant.py
verified_destinations/milvus/: destination.py  loader.py  seeder.py  specs.py  specs.yml
verified_destinations/milvus/poc/: crud.py  load.py
verified_destinations/milvus/tests/: conftest.py  test_milvus.py
verified_destinations/mysql/: destination.py
verified_destinations/pinecone/: destination.py  loader.py  seeder.py  setup.py  specs.py  specs.yml
verified_destinations/pinecone/tests/: conftest.py  test_pinecone.py
verified_destinations/qdrant/: destination.py  loader.py  seeder.py  specs.py  specs.yml
verified_destinations/qdrant/tests/: conftest.py  test_qdrant.py
verified_destinations/weaviate/: destination.py  loader.py  seeder.py  specs.py  specs.yml
verified_destinations/weaviate/poc/: gen.py  load.py  retrieve.py
verified_destinations/weaviate/tests/: conftest.py  test_weaviate.py
