[project]
name = "verified-destinations"
version = "0.1.0"
description = "Will host destinations for the dat project"
license = {text = "MIT License"}
dependencies = [
  "pytest",
  "pydantic",
  "PyYAML",
  # TODO
  "pinecone-client==2.2.4",
  "qdrant-client==1.7.3",
  "dat-core@git+ssh://git@github.com/riju-dc/dat-core@feature/base-classes",
]

[build-system]
requires = [
    "setuptools", "wheel",
]

# [tool.setuptools.packages.find]
# exclude = ["Executables*", "Orchestrator*", ] 